--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2024"
 
 [dependencies]
 clap = "4.5.59"
-serde = "1.0.228"
+serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-chrono = "0.4.43"
+chrono = { version = "0.4.43", features = ["serde"] }
 thiserror = "2.0.18"
-uuid = { version = "1.21.0", features = ["v4"] }
+uuid = { version = "1.21.0", features = ["v4", "serde"] }
 tempfile = "3.25.0"
+directories = "6.0.0"
